# OPC-UAmodeler-auto-kit

./: CMakeLists.txt  README.md  fix_header.py  test.py
open62541/: open62541.h
open62541/nodeset_compiler/: example.xml
src/: server.c
